third_party/rust/cxx/v1/crate/tests/ui/type_alias_rust.stderr
error: type alias in extern "Rust" block is not supported
 --> $DIR/type_alias_rust.rs:5:9
  |
5 |         type Alias = crate::Type;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
