third_party/rust/cxx/v1/crate/tests/ui/type_alias_rust.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        /// Incorrect.
        type Alias = crate::Type;
    }
}

fn main() {}
